# zip

./: .cursorignore  .env.example  .eslintrc.json  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  PITCH.md  README.md  SECURITY.md  TROUBLESHOOTING_LOCALHOST.md  eslint.config.js  example-env  package-lock.json  package.json  playwright.config.ts  restart_and_test.sh
.claude/: README.md  launch.json  settings.json
.claude/agents/: brain-deployer.md  firmware-builder.md  robot-tester.md  splat-debugger.md
.claude/commands/: autonomous-dev.md  deploy-brain.md  firmware-build.md  jetson-status.md  verify-changes.md  verify-splat.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: agent-task.yml  bug.yml  bug_report.md  enhancement.yml  feature.yml  feature_request.md  hardware_issue.md
.github/workflows/: agent-pr-check.yml  docs-lint.yml  firmware-ci.yml  hud-ci.yml  lint.yml  test.yml  typecheck.yml
app/: globals.css  layout.tsx
app/robot/: page.tsx
app/v2/: page.tsx
app/vision-diagnostics/: page.tsx
components/: ThemeWrapper.tsx
components/hud/: CenterCore.tsx  HudShell.tsx  RightChat.tsx  SettingsDropdown.tsx  TopBar.tsx
components/robot/: ConnectionStatus.tsx  MotionControl.tsx
components/v2/: AgentRail.tsx  Bezel.tsx  CameraFeed.tsx  DepthPanel.tsx  EventLog.tsx  HudShell.tsx  MapView.tsx  MissionBar.tsx  MotorPair.tsx  RadarPanel.tsx  SnapshotGallery.tsx
data/: .gitkeep
docs/: ARCHITECTURE.md  BRIDGE_CONSOLIDATION.md  CLEANUP_SUMMARY.md  GLOSSARY.md  HARDWARE.md  INTEGRATION_VERIFICATION.md  KNOWN_ISSUES.md  OLD_BRIDGE_REMOVAL.md  README.md  ROADMAP.md  ROBOT_CONTROL_REVIEW.md  STATUS.md  TEAM.md  TRACTION.md  VISION.md
docs/adr/: 0001-monorepo-with-submodule.md  0002-uno-owns-time.md  0003-uart-500k-baud.md  0004-sticky-bus-topics.md  0005-wheels-locked-default.md  0006-llm-on-jetson-deferred.md  0007-v1-archived-as-predicate.md  README.md
docs/agents/: architecture.md
docs/archive/: BUILD_ERRORS_FIXED.md  BUILD_ERRORS_FIXED_COMPLETE.md  BUILD_ERRORS_FIX_SUMMARY.md  BUILD_ERRORS_STATUS.md  CUDA_COMPAT_FIXED.md  CUDA_COMPAT_FIXED_FINAL.md  DOCKER_REVIEW_REPORT.md  DOCKER_SETUP_COMPLETE.md  DUPLICATE_PACKAGE_FIX_COMPLETE.md  JAZZY_DOCKER_MIGRATION.md  JAZZY_DOCKER_SUMMARY.md  JETSON_ZOO_COMPLIANCE_REPORT.md  NATIVE_MIGRATION_COMPLETE.md  NVIDIA_CONTAINERS_STATUS.md  PERFORMANCE_ANALYSIS.md  PHASE1_SETUP_JAZZY_DOCKER.md  README.md  SERVICES_STATUS.md  TEST_INSTRUCTIONS.md  ULTRALYTICS_NVIDIA_COMPLIANCE.md  VISION_SYSTEM_STATUS.md  VISION_SYSTEM_STATUS_FINAL.md  WORKSPACE_BUILD_STATUS.md  WORKSPACE_BUILD_VERIFICATION.md  YOLO11_BBOX_FIX_SUMMARY.md  YOLO11_DETECTION_FIXES.md  YOLO11_E2E_STATUS.md  YOLO11_E2E_TEST_REPORT.md  YOLO11_ENVIRONMENT_ROBUSTNESS.md  YOLO11_INTEGRATION_STATUS.md  YOLO11_MULTI_OBJECT_FIX.md  YOLO11_TEST_REPORT.md  YOLOE_ARCHITECTURE_REVIEW.md  YOLOE_MEMORY_FIXES_COMPLETE.md  YOLOE_MIGRATION_COMPLETE.md  YOLOE_TEST_STATUS.md  YOLOE_V8L_BUILD_COMPLETE.md  YOLOE_V8L_BUILD_STATUS.md  YOLOE_V8L_DOWNLOAD_COMPLETE.md  YOLOE_V8L_FINAL_STATUS.md  (+7 more)
docs/images/: README.md
docs/jarvis/: DEPLOY.md  README.md  RESEARCH_AND_DECISIONS.md
docs/ros2/: ARDUINO_COMMANDS_TEST_REPORT.md  ARDUINO_ROS_COMMUNICATION.md  CAMERA_DRIVER_FIX.md  README.md  (+22 more)
hooks/: usePanelContext.ts  usePanelUpdates.ts  useRobot.ts  useTTS.ts
install/: local_setup.sh  setup.sh
jarvis/: README.md
lib/: constants.ts
log/: latest_build
robot/: ELEGOO_MOTION_CONTROL.md
ros2_packages/: .colcon_ignore
ros2_packages/zip_control/: package.xml  setup.cfg  setup.py
ros2_packages/zip_control/config/: serial_bridge.yaml
ros2_packages/zip_control/launch/: serial_bridge.launch.py
ros2_packages/zip_control/zip_control/: __init__.py  serial_bridge_node.py
ros2_packages/zip_core/: CMakeLists.txt  README.md  package.xml
ros2_packages/zip_core/msg/: BatteryStatus.msg  RobotDiagnostics.msg  RobotSensors.msg  VoiceState.msg
ros2_packages/zip_core/srv/: DirectMotorControl.srv  EmergencyStop.srv  GetDiagnostics.srv  MacroCancel.srv  MacroExecute.srv  ReRunInit.srv  ServoControl.srv  SetDriveConfig.srv
ros2_packages/zip_orchestration/: package.xml  setup.cfg  setup.py
ros2_packages/zip_orchestration/launch/: mcp_server.launch.py
ros2_packages/zip_orchestration/zip_orchestration/: __init__.py  mcp_http_server.py  mcp_server.py
ros2_packages/zip_vision/: CMakeLists.txt  package.xml
ros2_packages/zip_vision/cmake/: FindTensorRT.cmake
ros2_packages/zip_vision/config/: camera_params.yaml  vlm_params.yaml  yoloe_params.yaml
ros2_packages/zip_vision/include/zip_vision/: vlm_engine.hpp  yoloe_engine.hpp
ros2_packages/zip_vision/launch/: camera.launch.py  vision_diagnostics_bridge.launch.py  vision_native.launch.py  vision_pipeline.launch.py  vlm.launch.py  yoloe.launch.py
ros2_packages/zip_vision/scripts/: run_vision_bridge.sh  start_vision_bridge.sh
ros2_packages/zip_vision/src/: diagnostics_bridge_node.cpp  test_yoloe_standalone.cpp  vision_diagnostics_bridge.py  vlm_engine.cpp  vlm_node.cpp  yoloe_engine.cpp  yoloe_node.cpp  yoloe_ros_node.py
ros2_packages/zip_vision/srv/: VLMInference.srv
ros2_packages/zip_vision/zip_vision/: vlm_service_node.py
scripts/: build-local.bat  build-with-logging.sh  capture-vision-overlay-screenshot.ts  check-access.sh  debug-serialport-path.ts  test-brain-integration.ts  test-context-filter-relevant.ts  test-context-filter.ts  test-conversation.ts  test-full-local.ts  test-health-local.ts  test-printer-api.ts  test-printer-connection.ts  test-robot-chat.ts  test-system-stats-integration.ts  test-vision-tools.ts  test-voice-fallback.ts  test_all_arduino_commands.sh  test_all_arduino_commands_final.sh  test_all_commands_final.sh  test_commands_comprehensive.sh  test_commands_simple.sh  test_yoloe_camera_confidence.sh  test_yoloe_final.sh  test_yoloe_full_factorial.sh  verify-all-services.sh
zip-v1/: HEAD_DATE.txt  HEAD_SHA.txt  README.md  structure.txt
zip-v2/: README.md
(+530 files in other folders)
