<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>zip_vision</name>
  <version>0.1.0</version>
  <description>ZIP Robot Vision: YOLOE (TensorRT) and VLM integration</description>
  <maintainer email="zip@example.com">ZIP Robot Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>vision_msgs</depend>
  <depend>camera_info_manager</depend>
  
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>rclpy</exec_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
  
  <!-- Python script entry points -->
  <exec_depend>python3-opencv</exec_depend>
</package>
